--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -357,16 +357,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="87b8c27f607f4f1396fec913e1ae39dc-4719acd0ae0e40878246980cd8c0deb2" name="87b8c27f607f4f1396fec913e1ae39dc" class="tab" checked><label for="87b8c27f607f4f1396fec913e1ae39dc-4719acd0ae0e40878246980cd8c0deb2" >General</label>
-<input type="radio" id="87b8c27f607f4f1396fec913e1ae39dc-a9fdad128e434b338a8e45b19d776d90" name="87b8c27f607f4f1396fec913e1ae39dc" class="tab" ><label for="87b8c27f607f4f1396fec913e1ae39dc-a9fdad128e434b338a8e45b19d776d90" >Startup</label>
-<input type="radio" id="87b8c27f607f4f1396fec913e1ae39dc-0c1455bbb30e4eed8215349e25eca1fc" name="87b8c27f607f4f1396fec913e1ae39dc" class="tab" ><label for="87b8c27f607f4f1396fec913e1ae39dc-0c1455bbb30e4eed8215349e25eca1fc" >Android</label>
-<input type="radio" id="87b8c27f607f4f1396fec913e1ae39dc-b65d33fa07c9488f90969051d2aaface" name="87b8c27f607f4f1396fec913e1ae39dc" class="tab" ><label for="87b8c27f607f4f1396fec913e1ae39dc-b65d33fa07c9488f90969051d2aaface" >iOS</label>
+<input type="radio" id="427fbc6c5a3c460eb47dc6490c4be287-3ecdef7f54c14ce2a703191896e00c72" name="427fbc6c5a3c460eb47dc6490c4be287" class="tab" checked><label for="427fbc6c5a3c460eb47dc6490c4be287-3ecdef7f54c14ce2a703191896e00c72" >General</label>
+<input type="radio" id="427fbc6c5a3c460eb47dc6490c4be287-98449aa2edc44171b699d82074dc46a0" name="427fbc6c5a3c460eb47dc6490c4be287" class="tab" ><label for="427fbc6c5a3c460eb47dc6490c4be287-98449aa2edc44171b699d82074dc46a0" >Startup</label>
+<input type="radio" id="427fbc6c5a3c460eb47dc6490c4be287-7e20493db7624bb2ad2e26cfe49f0d4b" name="427fbc6c5a3c460eb47dc6490c4be287" class="tab" ><label for="427fbc6c5a3c460eb47dc6490c4be287-7e20493db7624bb2ad2e26cfe49f0d4b" >Android</label>
+<input type="radio" id="427fbc6c5a3c460eb47dc6490c4be287-e916e10623be4c589657de2ba1a06dab" name="427fbc6c5a3c460eb47dc6490c4be287" class="tab" ><label for="427fbc6c5a3c460eb47dc6490c4be287-e916e10623be4c589657de2ba1a06dab" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
@@ -434,7 +434,7 @@ services.UseBleHosting();
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/blehosting/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/blehosting/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
