--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1b80e8a3542c4357b6696ba5e3428935-9168679dc43446528bc6f0ecb61cae68" name="1b80e8a3542c4357b6696ba5e3428935" class="tab" checked><label for="1b80e8a3542c4357b6696ba5e3428935-9168679dc43446528bc6f0ecb61cae68" >General</label>
-<input type="radio" id="1b80e8a3542c4357b6696ba5e3428935-435b329d7f1a42f0b9b44926842b8344" name="1b80e8a3542c4357b6696ba5e3428935" class="tab" ><label for="1b80e8a3542c4357b6696ba5e3428935-435b329d7f1a42f0b9b44926842b8344" >Startup</label>
-<input type="radio" id="1b80e8a3542c4357b6696ba5e3428935-351943bda4b547529a571de722619753" name="1b80e8a3542c4357b6696ba5e3428935" class="tab" ><label for="1b80e8a3542c4357b6696ba5e3428935-351943bda4b547529a571de722619753" >Android</label>
-<input type="radio" id="1b80e8a3542c4357b6696ba5e3428935-7b8f21af1fb846fbbf02880be9a29e18" name="1b80e8a3542c4357b6696ba5e3428935" class="tab" ><label for="1b80e8a3542c4357b6696ba5e3428935-7b8f21af1fb846fbbf02880be9a29e18" >iOS</label>
-<input type="radio" id="1b80e8a3542c4357b6696ba5e3428935-217c5bd949694e76aebe75e1805f47fd" name="1b80e8a3542c4357b6696ba5e3428935" class="tab" ><label for="1b80e8a3542c4357b6696ba5e3428935-217c5bd949694e76aebe75e1805f47fd" >Windows</label>
+<input type="radio" id="f4ab79c6e074422a8181235c928ca7ba-c0e142c870ed46c59df2ae92bcaf82d0" name="f4ab79c6e074422a8181235c928ca7ba" class="tab" checked><label for="f4ab79c6e074422a8181235c928ca7ba-c0e142c870ed46c59df2ae92bcaf82d0" >General</label>
+<input type="radio" id="f4ab79c6e074422a8181235c928ca7ba-f0d4441851ed42d99bdc1382a651da41" name="f4ab79c6e074422a8181235c928ca7ba" class="tab" ><label for="f4ab79c6e074422a8181235c928ca7ba-f0d4441851ed42d99bdc1382a651da41" >Startup</label>
+<input type="radio" id="f4ab79c6e074422a8181235c928ca7ba-a47904847f4b4b08b1e5f1dd101b239a" name="f4ab79c6e074422a8181235c928ca7ba" class="tab" ><label for="f4ab79c6e074422a8181235c928ca7ba-a47904847f4b4b08b1e5f1dd101b239a" >Android</label>
+<input type="radio" id="f4ab79c6e074422a8181235c928ca7ba-eeab0446fa374912a27733cbfdcc83e8" name="f4ab79c6e074422a8181235c928ca7ba" class="tab" ><label for="f4ab79c6e074422a8181235c928ca7ba-eeab0446fa374912a27733cbfdcc83e8" >iOS</label>
+<input type="radio" id="f4ab79c6e074422a8181235c928ca7ba-bd7d7974bca84fb1853b093a6bf4f7ec" name="f4ab79c6e074422a8181235c928ca7ba" class="tab" ><label for="f4ab79c6e074422a8181235c928ca7ba-bd7d7974bca84fb1853b093a6bf4f7ec" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -477,7 +477,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/framework/gettingstarted.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/framework/gettingstarted.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
