--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -355,17 +355,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="ef4b3a2ea4d7434c93677919622631d6-ff3850f5e20b4bf68eef5ec8882afd9c" name="ef4b3a2ea4d7434c93677919622631d6" class="tab" checked=""><label for="ef4b3a2ea4d7434c93677919622631d6-ff3850f5e20b4bf68eef5ec8882afd9c">General</label>
-<input type="radio" id="ef4b3a2ea4d7434c93677919622631d6-a6c213a8d7e54c92b5f6c114de41126f" name="ef4b3a2ea4d7434c93677919622631d6" class="tab"><label for="ef4b3a2ea4d7434c93677919622631d6-a6c213a8d7e54c92b5f6c114de41126f">Startup</label>
-<input type="radio" id="ef4b3a2ea4d7434c93677919622631d6-e9638ff6b1164b86b883cdc0618cdce7" name="ef4b3a2ea4d7434c93677919622631d6" class="tab"><label for="ef4b3a2ea4d7434c93677919622631d6-e9638ff6b1164b86b883cdc0618cdce7">Android</label>
-<input type="radio" id="ef4b3a2ea4d7434c93677919622631d6-b59e71968e8c47e9a3f7aa293ce2a189" name="ef4b3a2ea4d7434c93677919622631d6" class="tab"><label for="ef4b3a2ea4d7434c93677919622631d6-b59e71968e8c47e9a3f7aa293ce2a189">iOS</label>
-<input type="radio" id="ef4b3a2ea4d7434c93677919622631d6-611602d3ff9f4df68dcf266e87f48625" name="ef4b3a2ea4d7434c93677919622631d6" class="tab"><label for="ef4b3a2ea4d7434c93677919622631d6-611602d3ff9f4df68dcf266e87f48625">Windows</label>
+<input type="radio" id="dcad31944ef04b1d9f765b89e1a35bf7-b1e9bc3cc04c44c1891df89b5f7432f8" name="dcad31944ef04b1d9f765b89e1a35bf7" class="tab" checked=""><label for="dcad31944ef04b1d9f765b89e1a35bf7-b1e9bc3cc04c44c1891df89b5f7432f8">General</label>
+<input type="radio" id="dcad31944ef04b1d9f765b89e1a35bf7-c601b868265c418987869fc43989e4d1" name="dcad31944ef04b1d9f765b89e1a35bf7" class="tab"><label for="dcad31944ef04b1d9f765b89e1a35bf7-c601b868265c418987869fc43989e4d1">Startup</label>
+<input type="radio" id="dcad31944ef04b1d9f765b89e1a35bf7-bc9c4496161642ca82ff0ffb0d014e03" name="dcad31944ef04b1d9f765b89e1a35bf7" class="tab"><label for="dcad31944ef04b1d9f765b89e1a35bf7-bc9c4496161642ca82ff0ffb0d014e03">Android</label>
+<input type="radio" id="dcad31944ef04b1d9f765b89e1a35bf7-dd6e36dfacec4b00a27e2d486edf54ab" name="dcad31944ef04b1d9f765b89e1a35bf7" class="tab"><label for="dcad31944ef04b1d9f765b89e1a35bf7-dd6e36dfacec4b00a27e2d486edf54ab">iOS</label>
+<input type="radio" id="dcad31944ef04b1d9f765b89e1a35bf7-5feb5108120a4850a768baf21b852486" name="dcad31944ef04b1d9f765b89e1a35bf7" class="tab"><label for="dcad31944ef04b1d9f765b89e1a35bf7-5feb5108120a4850a768baf21b852486">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -447,11 +447,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="9dd97f681b564c03833196a58340197c-8dc943b7d2f04a5c81dd9c875a43acd4" name="9dd97f681b564c03833196a58340197c" class="tab" checked=""><label for="9dd97f681b564c03833196a58340197c-8dc943b7d2f04a5c81dd9c875a43acd4">General</label>
-<input type="radio" id="9dd97f681b564c03833196a58340197c-e268c79c06434fea958be12b90e4811c" name="9dd97f681b564c03833196a58340197c" class="tab"><label for="9dd97f681b564c03833196a58340197c-e268c79c06434fea958be12b90e4811c">Startup</label>
-<input type="radio" id="9dd97f681b564c03833196a58340197c-2abaad8c58544d4eb17bf7ca20b73012" name="9dd97f681b564c03833196a58340197c" class="tab"><label for="9dd97f681b564c03833196a58340197c-2abaad8c58544d4eb17bf7ca20b73012">Android</label>
-<input type="radio" id="9dd97f681b564c03833196a58340197c-67602028d81443949ffbf0ac1a2f7a38" name="9dd97f681b564c03833196a58340197c" class="tab"><label for="9dd97f681b564c03833196a58340197c-67602028d81443949ffbf0ac1a2f7a38">iOS</label>
-<input type="radio" id="9dd97f681b564c03833196a58340197c-547a0344501746c89cd96a4f412b3b42" name="9dd97f681b564c03833196a58340197c" class="tab"><label for="9dd97f681b564c03833196a58340197c-547a0344501746c89cd96a4f412b3b42">Windows</label>
+<input type="radio" id="eb8dcc6ecde44e958990ef83d0578583-4e4c3f95aee14ca7927131392fad4ddd" name="eb8dcc6ecde44e958990ef83d0578583" class="tab" checked=""><label for="eb8dcc6ecde44e958990ef83d0578583-4e4c3f95aee14ca7927131392fad4ddd">General</label>
+<input type="radio" id="eb8dcc6ecde44e958990ef83d0578583-f85eacc90b2a4748a2c7edded20ba322" name="eb8dcc6ecde44e958990ef83d0578583" class="tab"><label for="eb8dcc6ecde44e958990ef83d0578583-f85eacc90b2a4748a2c7edded20ba322">Startup</label>
+<input type="radio" id="eb8dcc6ecde44e958990ef83d0578583-00103f09ea384fed84c5ae7733b85560" name="eb8dcc6ecde44e958990ef83d0578583" class="tab"><label for="eb8dcc6ecde44e958990ef83d0578583-00103f09ea384fed84c5ae7733b85560">Android</label>
+<input type="radio" id="eb8dcc6ecde44e958990ef83d0578583-a6f52ffaafaf4db393cd39d2394cde94" name="eb8dcc6ecde44e958990ef83d0578583" class="tab"><label for="eb8dcc6ecde44e958990ef83d0578583-a6f52ffaafaf4db393cd39d2394cde94">iOS</label>
+<input type="radio" id="eb8dcc6ecde44e958990ef83d0578583-3d15347614274c54b1bd989dd7d689be" name="eb8dcc6ecde44e958990ef83d0578583" class="tab"><label for="eb8dcc6ecde44e958990ef83d0578583-3d15347614274c54b1bd989dd7d689be">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -564,7 +564,7 @@ services.UseHttpTransfers&lt;YourNamespace.MyHttpTransferDelegate&gt;();
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/httptransfers/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/httptransfers/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
