--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a867c6ad7dfd45a6ac15ca1b2dbf0907-45fece2fde1646b4969d9d104d288d34" name="a867c6ad7dfd45a6ac15ca1b2dbf0907" class="tab" checked><label for="a867c6ad7dfd45a6ac15ca1b2dbf0907-45fece2fde1646b4969d9d104d288d34" >General</label>
-<input type="radio" id="a867c6ad7dfd45a6ac15ca1b2dbf0907-384e2810e7d94cc9a8c5a82afb50d961" name="a867c6ad7dfd45a6ac15ca1b2dbf0907" class="tab" ><label for="a867c6ad7dfd45a6ac15ca1b2dbf0907-384e2810e7d94cc9a8c5a82afb50d961" >Startup</label>
-<input type="radio" id="a867c6ad7dfd45a6ac15ca1b2dbf0907-4fab7d8e10ec4d988a3a1035d0942927" name="a867c6ad7dfd45a6ac15ca1b2dbf0907" class="tab" ><label for="a867c6ad7dfd45a6ac15ca1b2dbf0907-4fab7d8e10ec4d988a3a1035d0942927" >Android</label>
-<input type="radio" id="a867c6ad7dfd45a6ac15ca1b2dbf0907-358c92f669374de4a28067d35f2a3f33" name="a867c6ad7dfd45a6ac15ca1b2dbf0907" class="tab" ><label for="a867c6ad7dfd45a6ac15ca1b2dbf0907-358c92f669374de4a28067d35f2a3f33" >iOS</label>
-<input type="radio" id="a867c6ad7dfd45a6ac15ca1b2dbf0907-5c1884aa50ef42958a3e6fbf4c96f3ca" name="a867c6ad7dfd45a6ac15ca1b2dbf0907" class="tab" ><label for="a867c6ad7dfd45a6ac15ca1b2dbf0907-5c1884aa50ef42958a3e6fbf4c96f3ca" >Windows</label>
+<input type="radio" id="8e82587e785d4265875fef87b914e469-00a3f400e4e14371b4e4ce463211348f" name="8e82587e785d4265875fef87b914e469" class="tab" checked><label for="8e82587e785d4265875fef87b914e469-00a3f400e4e14371b4e4ce463211348f" >General</label>
+<input type="radio" id="8e82587e785d4265875fef87b914e469-83f3ad65dbec45de985a7b8f0df26d57" name="8e82587e785d4265875fef87b914e469" class="tab" ><label for="8e82587e785d4265875fef87b914e469-83f3ad65dbec45de985a7b8f0df26d57" >Startup</label>
+<input type="radio" id="8e82587e785d4265875fef87b914e469-fe5e14e607b544ceb43b38962ce2a497" name="8e82587e785d4265875fef87b914e469" class="tab" ><label for="8e82587e785d4265875fef87b914e469-fe5e14e607b544ceb43b38962ce2a497" >Android</label>
+<input type="radio" id="8e82587e785d4265875fef87b914e469-134b593d1c8c4d029008999ed169ae16" name="8e82587e785d4265875fef87b914e469" class="tab" ><label for="8e82587e785d4265875fef87b914e469-134b593d1c8c4d029008999ed169ae16" >iOS</label>
+<input type="radio" id="8e82587e785d4265875fef87b914e469-7b1ce8d22d14495b89ad4d00bd1dba92" name="8e82587e785d4265875fef87b914e469" class="tab" ><label for="8e82587e785d4265875fef87b914e469-7b1ce8d22d14495b89ad4d00bd1dba92" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -537,7 +537,7 @@ var result = await CrossJobs.Current.Run(&quot;YourJobName&quot;);
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/jobs/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/jobs/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
