--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="ad57cac2a3d944158137f13e21f59249-185ab5e0ba894d41ae66d37e76b397c2" name="ad57cac2a3d944158137f13e21f59249" class="tab" checked><label for="ad57cac2a3d944158137f13e21f59249-185ab5e0ba894d41ae66d37e76b397c2" >General</label>
-<input type="radio" id="ad57cac2a3d944158137f13e21f59249-3c207411ed1340c088010af02d66a095" name="ad57cac2a3d944158137f13e21f59249" class="tab" ><label for="ad57cac2a3d944158137f13e21f59249-3c207411ed1340c088010af02d66a095" >Startup</label>
-<input type="radio" id="ad57cac2a3d944158137f13e21f59249-78c67d9a357749d59a8cd6c3ddef9961" name="ad57cac2a3d944158137f13e21f59249" class="tab" ><label for="ad57cac2a3d944158137f13e21f59249-78c67d9a357749d59a8cd6c3ddef9961" >Android</label>
-<input type="radio" id="ad57cac2a3d944158137f13e21f59249-e441ccdbfcbf4fbaa24d06b21f3a0c81" name="ad57cac2a3d944158137f13e21f59249" class="tab" ><label for="ad57cac2a3d944158137f13e21f59249-e441ccdbfcbf4fbaa24d06b21f3a0c81" >iOS</label>
-<input type="radio" id="ad57cac2a3d944158137f13e21f59249-edc2f030e197479e8134c7b1df87fd29" name="ad57cac2a3d944158137f13e21f59249" class="tab" ><label for="ad57cac2a3d944158137f13e21f59249-edc2f030e197479e8134c7b1df87fd29" >Windows</label>
+<input type="radio" id="0ea448b71bd34bd8b39e8bd8f5708a81-785f24b38061440991a8fa34480b78a4" name="0ea448b71bd34bd8b39e8bd8f5708a81" class="tab" checked><label for="0ea448b71bd34bd8b39e8bd8f5708a81-785f24b38061440991a8fa34480b78a4" >General</label>
+<input type="radio" id="0ea448b71bd34bd8b39e8bd8f5708a81-7cb863055b4d40228e6c61168b63dfcb" name="0ea448b71bd34bd8b39e8bd8f5708a81" class="tab" ><label for="0ea448b71bd34bd8b39e8bd8f5708a81-7cb863055b4d40228e6c61168b63dfcb" >Startup</label>
+<input type="radio" id="0ea448b71bd34bd8b39e8bd8f5708a81-e040f57ebcce442086bcc96239a4a673" name="0ea448b71bd34bd8b39e8bd8f5708a81" class="tab" ><label for="0ea448b71bd34bd8b39e8bd8f5708a81-e040f57ebcce442086bcc96239a4a673" >Android</label>
+<input type="radio" id="0ea448b71bd34bd8b39e8bd8f5708a81-1a99feb522cc4dd9b8200c8282345e06" name="0ea448b71bd34bd8b39e8bd8f5708a81" class="tab" ><label for="0ea448b71bd34bd8b39e8bd8f5708a81-1a99feb522cc4dd9b8200c8282345e06" >iOS</label>
+<input type="radio" id="0ea448b71bd34bd8b39e8bd8f5708a81-86fe91fac8e742d8ac23c83ef54df273" name="0ea448b71bd34bd8b39e8bd8f5708a81" class="tab" ><label for="0ea448b71bd34bd8b39e8bd8f5708a81-86fe91fac8e742d8ac23c83ef54df273" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -638,7 +638,7 @@ public class GeofenceUsage
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/locations/geofences.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/locations/geofences.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
