--- a/locations/gps.html
+++ b/locations/gps.html
@@ -357,18 +357,18 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="874fbb87308944c5b88c244a21001b51-bf2887b968bb4ead9214e6a291370966" name="874fbb87308944c5b88c244a21001b51" class="tab" checked><label for="874fbb87308944c5b88c244a21001b51-bf2887b968bb4ead9214e6a291370966" >General</label>
-<input type="radio" id="874fbb87308944c5b88c244a21001b51-56074e02e34b4110907424c11a9ca2e3" name="874fbb87308944c5b88c244a21001b51" class="tab" ><label for="874fbb87308944c5b88c244a21001b51-56074e02e34b4110907424c11a9ca2e3" >Startup</label>
-<input type="radio" id="874fbb87308944c5b88c244a21001b51-382a14c1deba44d0b9f0706224a40658" name="874fbb87308944c5b88c244a21001b51" class="tab" ><label for="874fbb87308944c5b88c244a21001b51-382a14c1deba44d0b9f0706224a40658" >Android</label>
-<input type="radio" id="874fbb87308944c5b88c244a21001b51-fe3404d19fc8478a9bb0092beed6f3f8" name="874fbb87308944c5b88c244a21001b51" class="tab" ><label for="874fbb87308944c5b88c244a21001b51-fe3404d19fc8478a9bb0092beed6f3f8" >iOS</label>
-<input type="radio" id="874fbb87308944c5b88c244a21001b51-5defcc359ca4446786a5464a1f50f170" name="874fbb87308944c5b88c244a21001b51" class="tab" ><label for="874fbb87308944c5b88c244a21001b51-5defcc359ca4446786a5464a1f50f170" >Windows</label>
+<input type="radio" id="a3d7e3264c29462684ba7a750a3f761f-e765d9b6493d42e9ab63cb4a42715ede" name="a3d7e3264c29462684ba7a750a3f761f" class="tab" checked><label for="a3d7e3264c29462684ba7a750a3f761f-e765d9b6493d42e9ab63cb4a42715ede" >General</label>
+<input type="radio" id="a3d7e3264c29462684ba7a750a3f761f-93b988a4d3154d70b7a19c0669206009" name="a3d7e3264c29462684ba7a750a3f761f" class="tab" ><label for="a3d7e3264c29462684ba7a750a3f761f-93b988a4d3154d70b7a19c0669206009" >Startup</label>
+<input type="radio" id="a3d7e3264c29462684ba7a750a3f761f-35169b12e67c44d1a92cc1fda8b4830b" name="a3d7e3264c29462684ba7a750a3f761f" class="tab" ><label for="a3d7e3264c29462684ba7a750a3f761f-35169b12e67c44d1a92cc1fda8b4830b" >Android</label>
+<input type="radio" id="a3d7e3264c29462684ba7a750a3f761f-f81a557e00a34cf4b12a43356cfb8862" name="a3d7e3264c29462684ba7a750a3f761f" class="tab" ><label for="a3d7e3264c29462684ba7a750a3f761f-f81a557e00a34cf4b12a43356cfb8862" >iOS</label>
+<input type="radio" id="a3d7e3264c29462684ba7a750a3f761f-770d2ab5e8d24865b84217729504270a" name="a3d7e3264c29462684ba7a750a3f761f" class="tab" ><label for="a3d7e3264c29462684ba7a750a3f761f-770d2ab5e8d24865b84217729504270a" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -516,7 +516,7 @@ public class GpsUsage
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/locations/gps.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/locations/gps.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
