--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -357,7 +357,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -372,10 +372,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="b5f3f02103ce417f905d5fb2d8035047-a5faa6bf320f4a5fa1a8433fd5f7794b" name="b5f3f02103ce417f905d5fb2d8035047" class="tab" checked><label for="b5f3f02103ce417f905d5fb2d8035047-a5faa6bf320f4a5fa1a8433fd5f7794b" >General</label>
-<input type="radio" id="b5f3f02103ce417f905d5fb2d8035047-98ef1fbce0994007b408dcc69e5b2c5e" name="b5f3f02103ce417f905d5fb2d8035047" class="tab" ><label for="b5f3f02103ce417f905d5fb2d8035047-98ef1fbce0994007b408dcc69e5b2c5e" >Startup</label>
-<input type="radio" id="b5f3f02103ce417f905d5fb2d8035047-b280e434d257413c97d6e30670cb82bf" name="b5f3f02103ce417f905d5fb2d8035047" class="tab" ><label for="b5f3f02103ce417f905d5fb2d8035047-b280e434d257413c97d6e30670cb82bf" >Android</label>
-<input type="radio" id="b5f3f02103ce417f905d5fb2d8035047-904bcdc6e3ed4f64a400154a5dadf51e" name="b5f3f02103ce417f905d5fb2d8035047" class="tab" ><label for="b5f3f02103ce417f905d5fb2d8035047-904bcdc6e3ed4f64a400154a5dadf51e" >iOS</label>
+<input type="radio" id="a92dabc8ac6a47a1a4daab2dfb19bcd1-361ee1b66f7d4b5996e9efe3fc89f200" name="a92dabc8ac6a47a1a4daab2dfb19bcd1" class="tab" checked><label for="a92dabc8ac6a47a1a4daab2dfb19bcd1-361ee1b66f7d4b5996e9efe3fc89f200" >General</label>
+<input type="radio" id="a92dabc8ac6a47a1a4daab2dfb19bcd1-ce162c19fa33496993dbbb09ddf4c98f" name="a92dabc8ac6a47a1a4daab2dfb19bcd1" class="tab" ><label for="a92dabc8ac6a47a1a4daab2dfb19bcd1-ce162c19fa33496993dbbb09ddf4c98f" >Startup</label>
+<input type="radio" id="a92dabc8ac6a47a1a4daab2dfb19bcd1-27a35129c5d943d3b4a6f68c4f8a28d9" name="a92dabc8ac6a47a1a4daab2dfb19bcd1" class="tab" ><label for="a92dabc8ac6a47a1a4daab2dfb19bcd1-27a35129c5d943d3b4a6f68c4f8a28d9" >Android</label>
+<input type="radio" id="a92dabc8ac6a47a1a4daab2dfb19bcd1-9c5f5413457b46b5b2582b5136f3268b" name="a92dabc8ac6a47a1a4daab2dfb19bcd1" class="tab" ><label for="a92dabc8ac6a47a1a4daab2dfb19bcd1-9c5f5413457b46b5b2582b5136f3268b" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -475,7 +475,7 @@ foreach (var record in data) {
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/locations/motionactivity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/locations/motionactivity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
