--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -355,7 +355,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -364,11 +364,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="dc12eac8ecc448b682f264a426fb756e-d87433cb735f4c8b9062f3ee2f002883" name="dc12eac8ecc448b682f264a426fb756e" class="tab" checked=""><label for="dc12eac8ecc448b682f264a426fb756e-d87433cb735f4c8b9062f3ee2f002883">General</label>
-<input type="radio" id="dc12eac8ecc448b682f264a426fb756e-e60271b0eb0c49508515ce0c1fd71c0a" name="dc12eac8ecc448b682f264a426fb756e" class="tab"><label for="dc12eac8ecc448b682f264a426fb756e-e60271b0eb0c49508515ce0c1fd71c0a">Startup</label>
-<input type="radio" id="dc12eac8ecc448b682f264a426fb756e-f5a464a835814f4fbc8a5e9f54ae7ae6" name="dc12eac8ecc448b682f264a426fb756e" class="tab"><label for="dc12eac8ecc448b682f264a426fb756e-f5a464a835814f4fbc8a5e9f54ae7ae6">Android</label>
-<input type="radio" id="dc12eac8ecc448b682f264a426fb756e-0fb2309e3a8b4d8db0adf20ee5cb35d7" name="dc12eac8ecc448b682f264a426fb756e" class="tab"><label for="dc12eac8ecc448b682f264a426fb756e-0fb2309e3a8b4d8db0adf20ee5cb35d7">iOS</label>
-<input type="radio" id="dc12eac8ecc448b682f264a426fb756e-fa15ceaff299423ca2acfd2e8b3a67ab" name="dc12eac8ecc448b682f264a426fb756e" class="tab"><label for="dc12eac8ecc448b682f264a426fb756e-fa15ceaff299423ca2acfd2e8b3a67ab">Windows</label>
+<input type="radio" id="84ea03ce28a241d9b380791d5db5dc4f-4795e003a24c4269ac14f28a036849c7" name="84ea03ce28a241d9b380791d5db5dc4f" class="tab" checked=""><label for="84ea03ce28a241d9b380791d5db5dc4f-4795e003a24c4269ac14f28a036849c7">General</label>
+<input type="radio" id="84ea03ce28a241d9b380791d5db5dc4f-f9d4eb20e1744a9c8831bcd358b7caed" name="84ea03ce28a241d9b380791d5db5dc4f" class="tab"><label for="84ea03ce28a241d9b380791d5db5dc4f-f9d4eb20e1744a9c8831bcd358b7caed">Startup</label>
+<input type="radio" id="84ea03ce28a241d9b380791d5db5dc4f-a81dfc569ab446fe8251a96cdd031e09" name="84ea03ce28a241d9b380791d5db5dc4f" class="tab"><label for="84ea03ce28a241d9b380791d5db5dc4f-a81dfc569ab446fe8251a96cdd031e09">Android</label>
+<input type="radio" id="84ea03ce28a241d9b380791d5db5dc4f-c877c2276a8246408253de2598c28624" name="84ea03ce28a241d9b380791d5db5dc4f" class="tab"><label for="84ea03ce28a241d9b380791d5db5dc4f-c877c2276a8246408253de2598c28624">iOS</label>
+<input type="radio" id="84ea03ce28a241d9b380791d5db5dc4f-1f944d1667814fa788ed1268d4bc8a24" name="84ea03ce28a241d9b380791d5db5dc4f" class="tab"><label for="84ea03ce28a241d9b380791d5db5dc4f-1f944d1667814fa788ed1268d4bc8a24">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -443,7 +443,7 @@ public class NotificationDelegate : INotificationDelegate
                                             <p class="small font-weight-bold">On This Page</p>
                                                 <p class="small"><a href="#notifications">Notifications</a></p>
                                         </div>
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/notifications/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/notifications/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
