--- a/push/azure.html
+++ b/push/azure.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d0d4c1bfaed9497495400613c6592697-301deda3412c42bda0bf73af6db46244" name="d0d4c1bfaed9497495400613c6592697" class="tab" checked><label for="d0d4c1bfaed9497495400613c6592697-301deda3412c42bda0bf73af6db46244" >General</label>
-<input type="radio" id="d0d4c1bfaed9497495400613c6592697-c0a4478cc5ee4f77856abb964403d86f" name="d0d4c1bfaed9497495400613c6592697" class="tab" ><label for="d0d4c1bfaed9497495400613c6592697-c0a4478cc5ee4f77856abb964403d86f" >Startup</label>
-<input type="radio" id="d0d4c1bfaed9497495400613c6592697-626cc20c66f54551a6291dfc06b6695e" name="d0d4c1bfaed9497495400613c6592697" class="tab" ><label for="d0d4c1bfaed9497495400613c6592697-626cc20c66f54551a6291dfc06b6695e" >Android</label>
-<input type="radio" id="d0d4c1bfaed9497495400613c6592697-ae1360d0599c48d68622bb5ad6b358c5" name="d0d4c1bfaed9497495400613c6592697" class="tab" ><label for="d0d4c1bfaed9497495400613c6592697-ae1360d0599c48d68622bb5ad6b358c5" >iOS</label>
-<input type="radio" id="d0d4c1bfaed9497495400613c6592697-2de38930acd84f68a4b2e99a6a92e82e" name="d0d4c1bfaed9497495400613c6592697" class="tab" ><label for="d0d4c1bfaed9497495400613c6592697-2de38930acd84f68a4b2e99a6a92e82e" >Windows</label>
+<input type="radio" id="996a2e76e77b47289bbf88eaf51b7fd6-41b3f9c7a6714b888bcc45921b20df2d" name="996a2e76e77b47289bbf88eaf51b7fd6" class="tab" checked><label for="996a2e76e77b47289bbf88eaf51b7fd6-41b3f9c7a6714b888bcc45921b20df2d" >General</label>
+<input type="radio" id="996a2e76e77b47289bbf88eaf51b7fd6-f3969b270f43436abfbfac65dd9c4f90" name="996a2e76e77b47289bbf88eaf51b7fd6" class="tab" ><label for="996a2e76e77b47289bbf88eaf51b7fd6-f3969b270f43436abfbfac65dd9c4f90" >Startup</label>
+<input type="radio" id="996a2e76e77b47289bbf88eaf51b7fd6-b60dbb929a9c4e7cbc1080a5fcbd24c1" name="996a2e76e77b47289bbf88eaf51b7fd6" class="tab" ><label for="996a2e76e77b47289bbf88eaf51b7fd6-b60dbb929a9c4e7cbc1080a5fcbd24c1" >Android</label>
+<input type="radio" id="996a2e76e77b47289bbf88eaf51b7fd6-d47ba68d594c4559a6516146a5f19bab" name="996a2e76e77b47289bbf88eaf51b7fd6" class="tab" ><label for="996a2e76e77b47289bbf88eaf51b7fd6-d47ba68d594c4559a6516146a5f19bab" >iOS</label>
+<input type="radio" id="996a2e76e77b47289bbf88eaf51b7fd6-54644b3bcfa24be09b31cd176184bb71" name="996a2e76e77b47289bbf88eaf51b7fd6" class="tab" ><label for="996a2e76e77b47289bbf88eaf51b7fd6-54644b3bcfa24be09b31cd176184bb71" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -460,7 +460,7 @@ public override void DidReceiveRemoteNotification(UIApplication application, NSD
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/push/azure.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/push/azure.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
