--- a/push/firebase.html
+++ b/push/firebase.html
@@ -355,16 +355,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="368e8ad0469e479fa257606babe1836f-3e673433af7e4db5bbab3e5f9e93bfad" name="368e8ad0469e479fa257606babe1836f" class="tab" checked=""><label for="368e8ad0469e479fa257606babe1836f-3e673433af7e4db5bbab3e5f9e93bfad">General</label>
-<input type="radio" id="368e8ad0469e479fa257606babe1836f-110172836f3047f1ae20613286cc4a56" name="368e8ad0469e479fa257606babe1836f" class="tab"><label for="368e8ad0469e479fa257606babe1836f-110172836f3047f1ae20613286cc4a56">Startup</label>
-<input type="radio" id="368e8ad0469e479fa257606babe1836f-21d1bef335a142d3937dff573dfc95b6" name="368e8ad0469e479fa257606babe1836f" class="tab"><label for="368e8ad0469e479fa257606babe1836f-21d1bef335a142d3937dff573dfc95b6">Android</label>
-<input type="radio" id="368e8ad0469e479fa257606babe1836f-0f1737efec834979b0e807ac3f189f0d" name="368e8ad0469e479fa257606babe1836f" class="tab"><label for="368e8ad0469e479fa257606babe1836f-0f1737efec834979b0e807ac3f189f0d">iOS</label>
+<input type="radio" id="4deba1c1f91d4f0bbbcdbe255f8ee375-efe25f75e66846c3bd8f697196723a54" name="4deba1c1f91d4f0bbbcdbe255f8ee375" class="tab" checked=""><label for="4deba1c1f91d4f0bbbcdbe255f8ee375-efe25f75e66846c3bd8f697196723a54">General</label>
+<input type="radio" id="4deba1c1f91d4f0bbbcdbe255f8ee375-fa8895635313474d935603a8a271c4af" name="4deba1c1f91d4f0bbbcdbe255f8ee375" class="tab"><label for="4deba1c1f91d4f0bbbcdbe255f8ee375-fa8895635313474d935603a8a271c4af">Startup</label>
+<input type="radio" id="4deba1c1f91d4f0bbbcdbe255f8ee375-b42377ae6dda4555bdbc315e1feca5c2" name="4deba1c1f91d4f0bbbcdbe255f8ee375" class="tab"><label for="4deba1c1f91d4f0bbbcdbe255f8ee375-b42377ae6dda4555bdbc315e1feca5c2">Android</label>
+<input type="radio" id="4deba1c1f91d4f0bbbcdbe255f8ee375-e5b1b84ef0fa4b02bfdfe6f516b98ae9" name="4deba1c1f91d4f0bbbcdbe255f8ee375" class="tab"><label for="4deba1c1f91d4f0bbbcdbe255f8ee375-e5b1b84ef0fa4b02bfdfe6f516b98ae9">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -454,7 +454,7 @@ and mark it as a "BundleResource"</p>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/push/firebase.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/push/firebase.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
