--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -357,16 +357,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="3aa15eafe4774ce7b4834ae6bc00702a-b7e681b6033c4c38b33b62521be5de87" name="3aa15eafe4774ce7b4834ae6bc00702a" class="tab" checked><label for="3aa15eafe4774ce7b4834ae6bc00702a-b7e681b6033c4c38b33b62521be5de87" >General</label>
-<input type="radio" id="3aa15eafe4774ce7b4834ae6bc00702a-8c768f6631a7409dab8e3e52e53f10e4" name="3aa15eafe4774ce7b4834ae6bc00702a" class="tab" ><label for="3aa15eafe4774ce7b4834ae6bc00702a-8c768f6631a7409dab8e3e52e53f10e4" >Startup</label>
-<input type="radio" id="3aa15eafe4774ce7b4834ae6bc00702a-449910cd346d4beda30916a2d208609a" name="3aa15eafe4774ce7b4834ae6bc00702a" class="tab" ><label for="3aa15eafe4774ce7b4834ae6bc00702a-449910cd346d4beda30916a2d208609a" >Android</label>
-<input type="radio" id="3aa15eafe4774ce7b4834ae6bc00702a-0742a094c95d4cf082453a8dee5d066b" name="3aa15eafe4774ce7b4834ae6bc00702a" class="tab" ><label for="3aa15eafe4774ce7b4834ae6bc00702a-0742a094c95d4cf082453a8dee5d066b" >iOS</label>
+<input type="radio" id="d7d0801db6fd4dfd80da356469170f3c-df468e50d2604ad09175673dbb1c523e" name="d7d0801db6fd4dfd80da356469170f3c" class="tab" checked><label for="d7d0801db6fd4dfd80da356469170f3c-df468e50d2604ad09175673dbb1c523e" >General</label>
+<input type="radio" id="d7d0801db6fd4dfd80da356469170f3c-ad8303356c8c445987766649b4fbbae0" name="d7d0801db6fd4dfd80da356469170f3c" class="tab" ><label for="d7d0801db6fd4dfd80da356469170f3c-ad8303356c8c445987766649b4fbbae0" >Startup</label>
+<input type="radio" id="d7d0801db6fd4dfd80da356469170f3c-34b881c9083b4797881e618a1a608cf8" name="d7d0801db6fd4dfd80da356469170f3c" class="tab" ><label for="d7d0801db6fd4dfd80da356469170f3c-34b881c9083b4797881e618a1a608cf8" >Android</label>
+<input type="radio" id="d7d0801db6fd4dfd80da356469170f3c-bd763b6fe9934065aa75025738209c58" name="d7d0801db6fd4dfd80da356469170f3c" class="tab" ><label for="d7d0801db6fd4dfd80da356469170f3c-bd763b6fe9934065aa75025738209c58" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -449,7 +449,7 @@ public override void DidReceiveRemoteNotification(UIApplication application, NSD
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/push/onesignal.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/push/onesignal.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
