--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="748d8eae0c764ae1949df930b14de996-a225a324264447c8b388266d2424d4c5" name="748d8eae0c764ae1949df930b14de996" class="tab" checked><label for="748d8eae0c764ae1949df930b14de996-a225a324264447c8b388266d2424d4c5" >General</label>
-<input type="radio" id="748d8eae0c764ae1949df930b14de996-830e87ceede7473c88ffa5b217f30e47" name="748d8eae0c764ae1949df930b14de996" class="tab" ><label for="748d8eae0c764ae1949df930b14de996-830e87ceede7473c88ffa5b217f30e47" >Startup</label>
-<input type="radio" id="748d8eae0c764ae1949df930b14de996-9b73eb8b888f4ed58d5dde3f88508857" name="748d8eae0c764ae1949df930b14de996" class="tab" ><label for="748d8eae0c764ae1949df930b14de996-9b73eb8b888f4ed58d5dde3f88508857" >Android</label>
-<input type="radio" id="748d8eae0c764ae1949df930b14de996-84763dc7f579418089f1a925eb6190ee" name="748d8eae0c764ae1949df930b14de996" class="tab" ><label for="748d8eae0c764ae1949df930b14de996-84763dc7f579418089f1a925eb6190ee" >iOS</label>
-<input type="radio" id="748d8eae0c764ae1949df930b14de996-d1da7bdccfce499685373e95e03ae533" name="748d8eae0c764ae1949df930b14de996" class="tab" ><label for="748d8eae0c764ae1949df930b14de996-d1da7bdccfce499685373e95e03ae533" >Windows</label>
+<input type="radio" id="1d2377292aaa4d0f9bdb8c67041dd6db-a4e287bbc8a0401dbaf06a8c5e8ddee3" name="1d2377292aaa4d0f9bdb8c67041dd6db" class="tab" checked><label for="1d2377292aaa4d0f9bdb8c67041dd6db-a4e287bbc8a0401dbaf06a8c5e8ddee3" >General</label>
+<input type="radio" id="1d2377292aaa4d0f9bdb8c67041dd6db-e046857739e641259d2d5eed2fcdb9c2" name="1d2377292aaa4d0f9bdb8c67041dd6db" class="tab" ><label for="1d2377292aaa4d0f9bdb8c67041dd6db-e046857739e641259d2d5eed2fcdb9c2" >Startup</label>
+<input type="radio" id="1d2377292aaa4d0f9bdb8c67041dd6db-cfdd84e3cd9342fbb27c78765867be5e" name="1d2377292aaa4d0f9bdb8c67041dd6db" class="tab" ><label for="1d2377292aaa4d0f9bdb8c67041dd6db-cfdd84e3cd9342fbb27c78765867be5e" >Android</label>
+<input type="radio" id="1d2377292aaa4d0f9bdb8c67041dd6db-5829b5f7d03844e884a8631d6f4d6bfd" name="1d2377292aaa4d0f9bdb8c67041dd6db" class="tab" ><label for="1d2377292aaa4d0f9bdb8c67041dd6db-5829b5f7d03844e884a8631d6f4d6bfd" >iOS</label>
+<input type="radio" id="1d2377292aaa4d0f9bdb8c67041dd6db-49c7b3c8564644b18f361a85a40efcae" name="1d2377292aaa4d0f9bdb8c67041dd6db" class="tab" ><label for="1d2377292aaa4d0f9bdb8c67041dd6db-49c7b3c8564644b18f361a85a40efcae" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -407,7 +407,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/accelerometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/accelerometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
