--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -357,16 +357,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b88607183b1c4a9696c18eb69be6e9f1-de62bf4e54ff48a39825cf1d40539d51" name="b88607183b1c4a9696c18eb69be6e9f1" class="tab" checked><label for="b88607183b1c4a9696c18eb69be6e9f1-de62bf4e54ff48a39825cf1d40539d51" >General</label>
-<input type="radio" id="b88607183b1c4a9696c18eb69be6e9f1-ea609141ed8c4031ad039e158cd180b6" name="b88607183b1c4a9696c18eb69be6e9f1" class="tab" ><label for="b88607183b1c4a9696c18eb69be6e9f1-ea609141ed8c4031ad039e158cd180b6" >Startup</label>
-<input type="radio" id="b88607183b1c4a9696c18eb69be6e9f1-8195060cabcc42f59ab11e39ee39ce45" name="b88607183b1c4a9696c18eb69be6e9f1" class="tab" ><label for="b88607183b1c4a9696c18eb69be6e9f1-8195060cabcc42f59ab11e39ee39ce45" >Android</label>
-<input type="radio" id="b88607183b1c4a9696c18eb69be6e9f1-e075143ac4ca48c6817ac874e557346e" name="b88607183b1c4a9696c18eb69be6e9f1" class="tab" ><label for="b88607183b1c4a9696c18eb69be6e9f1-e075143ac4ca48c6817ac874e557346e" >Windows</label>
+<input type="radio" id="9a319deae99f4a21822ae1181af64854-a0ec6971fb6d41b0941d8f3c55efcfd4" name="9a319deae99f4a21822ae1181af64854" class="tab" checked><label for="9a319deae99f4a21822ae1181af64854-a0ec6971fb6d41b0941d8f3c55efcfd4" >General</label>
+<input type="radio" id="9a319deae99f4a21822ae1181af64854-be61728dfc784a08aadbdebe00b39f0d" name="9a319deae99f4a21822ae1181af64854" class="tab" ><label for="9a319deae99f4a21822ae1181af64854-be61728dfc784a08aadbdebe00b39f0d" >Startup</label>
+<input type="radio" id="9a319deae99f4a21822ae1181af64854-282ae6bb7ec840668279e0162a4ba363" name="9a319deae99f4a21822ae1181af64854" class="tab" ><label for="9a319deae99f4a21822ae1181af64854-282ae6bb7ec840668279e0162a4ba363" >Android</label>
+<input type="radio" id="9a319deae99f4a21822ae1181af64854-6b494850b3684add98fe9fca373436df" name="9a319deae99f4a21822ae1181af64854" class="tab" ><label for="9a319deae99f4a21822ae1181af64854-6b494850b3684add98fe9fca373436df" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -403,7 +403,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/ambientlight.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/ambientlight.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
