--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="bacd5e4b54224940b9a9d6890ad5b057-845b97520f5542d28af8382b9d609eb5" name="bacd5e4b54224940b9a9d6890ad5b057" class="tab" checked><label for="bacd5e4b54224940b9a9d6890ad5b057-845b97520f5542d28af8382b9d609eb5" >General</label>
-<input type="radio" id="bacd5e4b54224940b9a9d6890ad5b057-d7452f3ea8584a8a832daefa67eb9bc8" name="bacd5e4b54224940b9a9d6890ad5b057" class="tab" ><label for="bacd5e4b54224940b9a9d6890ad5b057-d7452f3ea8584a8a832daefa67eb9bc8" >Startup</label>
-<input type="radio" id="bacd5e4b54224940b9a9d6890ad5b057-dee3c9b361734d46b5032a7558af10a0" name="bacd5e4b54224940b9a9d6890ad5b057" class="tab" ><label for="bacd5e4b54224940b9a9d6890ad5b057-dee3c9b361734d46b5032a7558af10a0" >Android</label>
-<input type="radio" id="bacd5e4b54224940b9a9d6890ad5b057-08317109465a40f882046fb8d0e44806" name="bacd5e4b54224940b9a9d6890ad5b057" class="tab" ><label for="bacd5e4b54224940b9a9d6890ad5b057-08317109465a40f882046fb8d0e44806" >iOS</label>
-<input type="radio" id="bacd5e4b54224940b9a9d6890ad5b057-71212e0d06bb44cc9c11c12f67ca98cd" name="bacd5e4b54224940b9a9d6890ad5b057" class="tab" ><label for="bacd5e4b54224940b9a9d6890ad5b057-71212e0d06bb44cc9c11c12f67ca98cd" >Windows</label>
+<input type="radio" id="c889ba06794d426384ec4c23d1d19434-f37465d63fdb41f79c3108f99d7e5005" name="c889ba06794d426384ec4c23d1d19434" class="tab" checked><label for="c889ba06794d426384ec4c23d1d19434-f37465d63fdb41f79c3108f99d7e5005" >General</label>
+<input type="radio" id="c889ba06794d426384ec4c23d1d19434-169c92f462ba420786e2f657694ca5dd" name="c889ba06794d426384ec4c23d1d19434" class="tab" ><label for="c889ba06794d426384ec4c23d1d19434-169c92f462ba420786e2f657694ca5dd" >Startup</label>
+<input type="radio" id="c889ba06794d426384ec4c23d1d19434-bc45099b17e5433a8cfc0e977300991e" name="c889ba06794d426384ec4c23d1d19434" class="tab" ><label for="c889ba06794d426384ec4c23d1d19434-bc45099b17e5433a8cfc0e977300991e" >Android</label>
+<input type="radio" id="c889ba06794d426384ec4c23d1d19434-bd4abb17cc52422aaa4620177403d5b4" name="c889ba06794d426384ec4c23d1d19434" class="tab" ><label for="c889ba06794d426384ec4c23d1d19434-bd4abb17cc52422aaa4620177403d5b4" >iOS</label>
+<input type="radio" id="c889ba06794d426384ec4c23d1d19434-b9fda17fbae8499586f4c680d52daef5" name="c889ba06794d426384ec4c23d1d19434" class="tab" ><label for="c889ba06794d426384ec4c23d1d19434-b9fda17fbae8499586f4c680d52daef5" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -407,7 +407,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/barometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/barometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
