--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1044acbdb10c4c8bab18d830003b9eff-d98f55d83c774350bd1ae0e3f5fbe555" name="1044acbdb10c4c8bab18d830003b9eff" class="tab" checked><label for="1044acbdb10c4c8bab18d830003b9eff-d98f55d83c774350bd1ae0e3f5fbe555" >General</label>
-<input type="radio" id="1044acbdb10c4c8bab18d830003b9eff-56c4288886d6456fbae657508414e24a" name="1044acbdb10c4c8bab18d830003b9eff" class="tab" ><label for="1044acbdb10c4c8bab18d830003b9eff-56c4288886d6456fbae657508414e24a" >Startup</label>
-<input type="radio" id="1044acbdb10c4c8bab18d830003b9eff-d7b1e3c9148a47338bf34610f203a9b3" name="1044acbdb10c4c8bab18d830003b9eff" class="tab" ><label for="1044acbdb10c4c8bab18d830003b9eff-d7b1e3c9148a47338bf34610f203a9b3" >Android</label>
-<input type="radio" id="1044acbdb10c4c8bab18d830003b9eff-d443eeb53ad8493685f72c641962b261" name="1044acbdb10c4c8bab18d830003b9eff" class="tab" ><label for="1044acbdb10c4c8bab18d830003b9eff-d443eeb53ad8493685f72c641962b261" >iOS</label>
-<input type="radio" id="1044acbdb10c4c8bab18d830003b9eff-69c57271bb9c498eab95052ee76bc6f9" name="1044acbdb10c4c8bab18d830003b9eff" class="tab" ><label for="1044acbdb10c4c8bab18d830003b9eff-69c57271bb9c498eab95052ee76bc6f9" >Windows</label>
+<input type="radio" id="2433f9c8c7984a34b0e0aca6e07e8012-8d8f2515dff44736807b2f493ead702f" name="2433f9c8c7984a34b0e0aca6e07e8012" class="tab" checked><label for="2433f9c8c7984a34b0e0aca6e07e8012-8d8f2515dff44736807b2f493ead702f" >General</label>
+<input type="radio" id="2433f9c8c7984a34b0e0aca6e07e8012-003f735eac894cd89c5d4f75b4920d48" name="2433f9c8c7984a34b0e0aca6e07e8012" class="tab" ><label for="2433f9c8c7984a34b0e0aca6e07e8012-003f735eac894cd89c5d4f75b4920d48" >Startup</label>
+<input type="radio" id="2433f9c8c7984a34b0e0aca6e07e8012-d3fc36d225a34dcab471c1ad14d0c2d4" name="2433f9c8c7984a34b0e0aca6e07e8012" class="tab" ><label for="2433f9c8c7984a34b0e0aca6e07e8012-d3fc36d225a34dcab471c1ad14d0c2d4" >Android</label>
+<input type="radio" id="2433f9c8c7984a34b0e0aca6e07e8012-baaa4bd79b4441cbacd0b0cafd9a9579" name="2433f9c8c7984a34b0e0aca6e07e8012" class="tab" ><label for="2433f9c8c7984a34b0e0aca6e07e8012-baaa4bd79b4441cbacd0b0cafd9a9579" >iOS</label>
+<input type="radio" id="2433f9c8c7984a34b0e0aca6e07e8012-920efce9e77d405c9422c9471a38394b" name="2433f9c8c7984a34b0e0aca6e07e8012" class="tab" ><label for="2433f9c8c7984a34b0e0aca6e07e8012-920efce9e77d405c9422c9471a38394b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -407,7 +407,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/compass.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/compass.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
