--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="caa01a98787241f1b70acbcc6c36f3b2-fa193cddd1b5472aac8801aba72cc291" name="caa01a98787241f1b70acbcc6c36f3b2" class="tab" checked><label for="caa01a98787241f1b70acbcc6c36f3b2-fa193cddd1b5472aac8801aba72cc291" >General</label>
-<input type="radio" id="caa01a98787241f1b70acbcc6c36f3b2-037c76e97048411982355c7378232f8b" name="caa01a98787241f1b70acbcc6c36f3b2" class="tab" ><label for="caa01a98787241f1b70acbcc6c36f3b2-037c76e97048411982355c7378232f8b" >Startup</label>
-<input type="radio" id="caa01a98787241f1b70acbcc6c36f3b2-e995b07635674cadb581ea1b69c29213" name="caa01a98787241f1b70acbcc6c36f3b2" class="tab" ><label for="caa01a98787241f1b70acbcc6c36f3b2-e995b07635674cadb581ea1b69c29213" >Android</label>
-<input type="radio" id="caa01a98787241f1b70acbcc6c36f3b2-2875c8031d96440eb824f3bfb86cbd8c" name="caa01a98787241f1b70acbcc6c36f3b2" class="tab" ><label for="caa01a98787241f1b70acbcc6c36f3b2-2875c8031d96440eb824f3bfb86cbd8c" >iOS</label>
-<input type="radio" id="caa01a98787241f1b70acbcc6c36f3b2-eeababd925d041a2a7373a7335375e67" name="caa01a98787241f1b70acbcc6c36f3b2" class="tab" ><label for="caa01a98787241f1b70acbcc6c36f3b2-eeababd925d041a2a7373a7335375e67" >Windows</label>
+<input type="radio" id="52f5f093d5b14e3eb980bcf353f41c1c-890d8f94669d4ec1a82fe9b8c6f4fee8" name="52f5f093d5b14e3eb980bcf353f41c1c" class="tab" checked><label for="52f5f093d5b14e3eb980bcf353f41c1c-890d8f94669d4ec1a82fe9b8c6f4fee8" >General</label>
+<input type="radio" id="52f5f093d5b14e3eb980bcf353f41c1c-1f9340689af549f59686f3be803e89e9" name="52f5f093d5b14e3eb980bcf353f41c1c" class="tab" ><label for="52f5f093d5b14e3eb980bcf353f41c1c-1f9340689af549f59686f3be803e89e9" >Startup</label>
+<input type="radio" id="52f5f093d5b14e3eb980bcf353f41c1c-ad63b68180814257a358c3fead96e573" name="52f5f093d5b14e3eb980bcf353f41c1c" class="tab" ><label for="52f5f093d5b14e3eb980bcf353f41c1c-ad63b68180814257a358c3fead96e573" >Android</label>
+<input type="radio" id="52f5f093d5b14e3eb980bcf353f41c1c-7bfede1887ea48b980f09b0305043c69" name="52f5f093d5b14e3eb980bcf353f41c1c" class="tab" ><label for="52f5f093d5b14e3eb980bcf353f41c1c-7bfede1887ea48b980f09b0305043c69" >iOS</label>
+<input type="radio" id="52f5f093d5b14e3eb980bcf353f41c1c-7bcdb20b3c0648b88ee6bf3628db6eb1" name="52f5f093d5b14e3eb980bcf353f41c1c" class="tab" ><label for="52f5f093d5b14e3eb980bcf353f41c1c-7bcdb20b3c0648b88ee6bf3628db6eb1" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -407,7 +407,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/gyroscope.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/gyroscope.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
