--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="8c74436ccb58462ba1c4ecd13b4ae9d9-cb3e6fbe7ea54c6dad31372cbf699103" name="8c74436ccb58462ba1c4ecd13b4ae9d9" class="tab" checked><label for="8c74436ccb58462ba1c4ecd13b4ae9d9-cb3e6fbe7ea54c6dad31372cbf699103" >General</label>
-<input type="radio" id="8c74436ccb58462ba1c4ecd13b4ae9d9-195f699d9d5d4eafa867bfd60d0110d5" name="8c74436ccb58462ba1c4ecd13b4ae9d9" class="tab" ><label for="8c74436ccb58462ba1c4ecd13b4ae9d9-195f699d9d5d4eafa867bfd60d0110d5" >Startup</label>
-<input type="radio" id="8c74436ccb58462ba1c4ecd13b4ae9d9-3184b3507c0c410fbd838af6ddd6dacb" name="8c74436ccb58462ba1c4ecd13b4ae9d9" class="tab" ><label for="8c74436ccb58462ba1c4ecd13b4ae9d9-3184b3507c0c410fbd838af6ddd6dacb" >Android</label>
-<input type="radio" id="8c74436ccb58462ba1c4ecd13b4ae9d9-204dbc640f20483688379a9e8483bbf0" name="8c74436ccb58462ba1c4ecd13b4ae9d9" class="tab" ><label for="8c74436ccb58462ba1c4ecd13b4ae9d9-204dbc640f20483688379a9e8483bbf0" >iOS</label>
-<input type="radio" id="8c74436ccb58462ba1c4ecd13b4ae9d9-bd465e145a054a6ead5c30abbc5e213d" name="8c74436ccb58462ba1c4ecd13b4ae9d9" class="tab" ><label for="8c74436ccb58462ba1c4ecd13b4ae9d9-bd465e145a054a6ead5c30abbc5e213d" >Windows</label>
+<input type="radio" id="e16b55cc28684d0a885ca72e3c167a12-cbd2436a2bf84628b8c49179e98fc9cc" name="e16b55cc28684d0a885ca72e3c167a12" class="tab" checked><label for="e16b55cc28684d0a885ca72e3c167a12-cbd2436a2bf84628b8c49179e98fc9cc" >General</label>
+<input type="radio" id="e16b55cc28684d0a885ca72e3c167a12-6aadde145bc74b2d9facf62db264d64b" name="e16b55cc28684d0a885ca72e3c167a12" class="tab" ><label for="e16b55cc28684d0a885ca72e3c167a12-6aadde145bc74b2d9facf62db264d64b" >Startup</label>
+<input type="radio" id="e16b55cc28684d0a885ca72e3c167a12-b841df36b3ec420b9b682b8c409ff8ad" name="e16b55cc28684d0a885ca72e3c167a12" class="tab" ><label for="e16b55cc28684d0a885ca72e3c167a12-b841df36b3ec420b9b682b8c409ff8ad" >Android</label>
+<input type="radio" id="e16b55cc28684d0a885ca72e3c167a12-c0d08f2a3b0449aaa61a920a9e7f30c6" name="e16b55cc28684d0a885ca72e3c167a12" class="tab" ><label for="e16b55cc28684d0a885ca72e3c167a12-c0d08f2a3b0449aaa61a920a9e7f30c6" >iOS</label>
+<input type="radio" id="e16b55cc28684d0a885ca72e3c167a12-2166212502a543a18d797d6ef70b5da3" name="e16b55cc28684d0a885ca72e3c167a12" class="tab" ><label for="e16b55cc28684d0a885ca72e3c167a12-2166212502a543a18d797d6ef70b5da3" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -407,7 +407,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/magnetometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/magnetometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
