--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7a60f86a93694015884224b744987fe6-15223075442c46628b0ace9baa11ddb5" name="7a60f86a93694015884224b744987fe6" class="tab" checked><label for="7a60f86a93694015884224b744987fe6-15223075442c46628b0ace9baa11ddb5" >General</label>
-<input type="radio" id="7a60f86a93694015884224b744987fe6-dc13037255844a52992f3a403f535ab9" name="7a60f86a93694015884224b744987fe6" class="tab" ><label for="7a60f86a93694015884224b744987fe6-dc13037255844a52992f3a403f535ab9" >Startup</label>
-<input type="radio" id="7a60f86a93694015884224b744987fe6-38243b7f44634c6aad5b2b4d74dc6a75" name="7a60f86a93694015884224b744987fe6" class="tab" ><label for="7a60f86a93694015884224b744987fe6-38243b7f44634c6aad5b2b4d74dc6a75" >Android</label>
-<input type="radio" id="7a60f86a93694015884224b744987fe6-72d119fc57e04d29bf8ba2d40b81d0e3" name="7a60f86a93694015884224b744987fe6" class="tab" ><label for="7a60f86a93694015884224b744987fe6-72d119fc57e04d29bf8ba2d40b81d0e3" >iOS</label>
-<input type="radio" id="7a60f86a93694015884224b744987fe6-222b7d11f20d4641b159a6f63936391d" name="7a60f86a93694015884224b744987fe6" class="tab" ><label for="7a60f86a93694015884224b744987fe6-222b7d11f20d4641b159a6f63936391d" >Windows</label>
+<input type="radio" id="8ed200ff463146e2b684cae860f64c0b-4440bd9f677d4d9a9c627c6eeddc9de5" name="8ed200ff463146e2b684cae860f64c0b" class="tab" checked><label for="8ed200ff463146e2b684cae860f64c0b-4440bd9f677d4d9a9c627c6eeddc9de5" >General</label>
+<input type="radio" id="8ed200ff463146e2b684cae860f64c0b-eb69221f50ff458ab6aba627e4e8e5dc" name="8ed200ff463146e2b684cae860f64c0b" class="tab" ><label for="8ed200ff463146e2b684cae860f64c0b-eb69221f50ff458ab6aba627e4e8e5dc" >Startup</label>
+<input type="radio" id="8ed200ff463146e2b684cae860f64c0b-ac8d0f49ea7a47f1b499045c0168fb6a" name="8ed200ff463146e2b684cae860f64c0b" class="tab" ><label for="8ed200ff463146e2b684cae860f64c0b-ac8d0f49ea7a47f1b499045c0168fb6a" >Android</label>
+<input type="radio" id="8ed200ff463146e2b684cae860f64c0b-98149c67d5f44287ac3f63daed6169d7" name="8ed200ff463146e2b684cae860f64c0b" class="tab" ><label for="8ed200ff463146e2b684cae860f64c0b-98149c67d5f44287ac3f63daed6169d7" >iOS</label>
+<input type="radio" id="8ed200ff463146e2b684cae860f64c0b-c5d5cb8ce92744bba6b3e978d9c67926" name="8ed200ff463146e2b684cae860f64c0b" class="tab" ><label for="8ed200ff463146e2b684cae860f64c0b-c5d5cb8ce92744bba6b3e978d9c67926" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -424,7 +424,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/pedometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/pedometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
