--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -357,17 +357,17 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="c1b650b6559e4d94a0bbc65bd34cb9df-e07c5e3fafad45f0abe988b76f035a37" name="c1b650b6559e4d94a0bbc65bd34cb9df" class="tab" checked><label for="c1b650b6559e4d94a0bbc65bd34cb9df-e07c5e3fafad45f0abe988b76f035a37" >General</label>
-<input type="radio" id="c1b650b6559e4d94a0bbc65bd34cb9df-a372c81a48c34d0e9c5d8fc24dc4aa9d" name="c1b650b6559e4d94a0bbc65bd34cb9df" class="tab" ><label for="c1b650b6559e4d94a0bbc65bd34cb9df-a372c81a48c34d0e9c5d8fc24dc4aa9d" >Startup</label>
-<input type="radio" id="c1b650b6559e4d94a0bbc65bd34cb9df-45513944cfc34ecc88dac5c31bcb0852" name="c1b650b6559e4d94a0bbc65bd34cb9df" class="tab" ><label for="c1b650b6559e4d94a0bbc65bd34cb9df-45513944cfc34ecc88dac5c31bcb0852" >Android</label>
-<input type="radio" id="c1b650b6559e4d94a0bbc65bd34cb9df-9bff0ede782843de9d3eaeb9b3d24f99" name="c1b650b6559e4d94a0bbc65bd34cb9df" class="tab" ><label for="c1b650b6559e4d94a0bbc65bd34cb9df-9bff0ede782843de9d3eaeb9b3d24f99" >iOS</label>
+<input type="radio" id="fe4fb51daf38467aa27fbfa34ee1a3a0-76302b7497754d2082eef652dbfe5175" name="fe4fb51daf38467aa27fbfa34ee1a3a0" class="tab" checked><label for="fe4fb51daf38467aa27fbfa34ee1a3a0-76302b7497754d2082eef652dbfe5175" >General</label>
+<input type="radio" id="fe4fb51daf38467aa27fbfa34ee1a3a0-68222c11ef414812b23969d22a3cbffc" name="fe4fb51daf38467aa27fbfa34ee1a3a0" class="tab" ><label for="fe4fb51daf38467aa27fbfa34ee1a3a0-68222c11ef414812b23969d22a3cbffc" >Startup</label>
+<input type="radio" id="fe4fb51daf38467aa27fbfa34ee1a3a0-159cb15445e749c4848d6b5e0761e80f" name="fe4fb51daf38467aa27fbfa34ee1a3a0" class="tab" ><label for="fe4fb51daf38467aa27fbfa34ee1a3a0-159cb15445e749c4848d6b5e0761e80f" >Android</label>
+<input type="radio" id="fe4fb51daf38467aa27fbfa34ee1a3a0-3a5b7f969a0145b78785c38fc3abb477" name="fe4fb51daf38467aa27fbfa34ee1a3a0" class="tab" ><label for="fe4fb51daf38467aa27fbfa34ee1a3a0-3a5b7f969a0145b78785c38fc3abb477" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -466,7 +466,7 @@ public class BeaconRanging
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/beacons/ranging.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/beacons/ranging.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
