--- a/ble/blemanager.html
+++ b/ble/blemanager.html
@@ -357,7 +357,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -436,7 +436,7 @@ CrossBleAdapter.Current.ToggleAdapterState();
                                             <p class="small font-weight-bold">On This Page</p>
                                                 <p class="small"><a href="#blemanager">BleManager</a></p>
                                         </div>
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/ble/blemanager.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/ble/blemanager.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
