--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -355,18 +355,18 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="aef6e01e24664250829582fb11ff6e41-077e4c7e6159407e90f50e44475b32f0" name="aef6e01e24664250829582fb11ff6e41" class="tab" checked=""><label for="aef6e01e24664250829582fb11ff6e41-077e4c7e6159407e90f50e44475b32f0">General</label>
-<input type="radio" id="aef6e01e24664250829582fb11ff6e41-faed3fc412d845b1bdb8408bfb271a96" name="aef6e01e24664250829582fb11ff6e41" class="tab"><label for="aef6e01e24664250829582fb11ff6e41-faed3fc412d845b1bdb8408bfb271a96">Startup</label>
-<input type="radio" id="aef6e01e24664250829582fb11ff6e41-c1e1b05d7cb34ebb820cb0aee14faa5f" name="aef6e01e24664250829582fb11ff6e41" class="tab"><label for="aef6e01e24664250829582fb11ff6e41-c1e1b05d7cb34ebb820cb0aee14faa5f">Android</label>
-<input type="radio" id="aef6e01e24664250829582fb11ff6e41-f9a79df59a9f4866b51374f127123dc8" name="aef6e01e24664250829582fb11ff6e41" class="tab"><label for="aef6e01e24664250829582fb11ff6e41-f9a79df59a9f4866b51374f127123dc8">iOS</label>
-<input type="radio" id="aef6e01e24664250829582fb11ff6e41-938d625131264a28824f8feb36b3b40c" name="aef6e01e24664250829582fb11ff6e41" class="tab"><label for="aef6e01e24664250829582fb11ff6e41-938d625131264a28824f8feb36b3b40c">Windows</label>
+<input type="radio" id="9f9e1383b59a4647bd0fcf6c9c838dcb-36a71a8d3ef24f65afbc1685f2566ea7" name="9f9e1383b59a4647bd0fcf6c9c838dcb" class="tab" checked=""><label for="9f9e1383b59a4647bd0fcf6c9c838dcb-36a71a8d3ef24f65afbc1685f2566ea7">General</label>
+<input type="radio" id="9f9e1383b59a4647bd0fcf6c9c838dcb-a94cb3866b0c40248dda60a3db167010" name="9f9e1383b59a4647bd0fcf6c9c838dcb" class="tab"><label for="9f9e1383b59a4647bd0fcf6c9c838dcb-a94cb3866b0c40248dda60a3db167010">Startup</label>
+<input type="radio" id="9f9e1383b59a4647bd0fcf6c9c838dcb-71b92cfeb88640daac978c2366eeab2e" name="9f9e1383b59a4647bd0fcf6c9c838dcb" class="tab"><label for="9f9e1383b59a4647bd0fcf6c9c838dcb-71b92cfeb88640daac978c2366eeab2e">Android</label>
+<input type="radio" id="9f9e1383b59a4647bd0fcf6c9c838dcb-9c9dc357f7ef4691ad385a307b13ae21" name="9f9e1383b59a4647bd0fcf6c9c838dcb" class="tab"><label for="9f9e1383b59a4647bd0fcf6c9c838dcb-9c9dc357f7ef4691ad385a307b13ae21">iOS</label>
+<input type="radio" id="9f9e1383b59a4647bd0fcf6c9c838dcb-2d12eb84193a44309e3662fc0953ce60" name="9f9e1383b59a4647bd0fcf6c9c838dcb" class="tab"><label for="9f9e1383b59a4647bd0fcf6c9c838dcb-2d12eb84193a44309e3662fc0953ce60">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
@@ -465,7 +465,7 @@ services.UseBleClient();
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/ble/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/ble/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
