--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -357,7 +357,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -374,11 +374,11 @@
         <li><a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a></li>
         <li><a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a></li>
         <li><a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a></li>
-        <li><a href="/release-notes/v230">v2.3.0 (Preview)</a></li>
+        <li><a href="/release-notes/nextrelease">v2.3.0 (Preview)</a></li>
 </ul>
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/release-notes/index.cshtml"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/index.cshtml"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
