--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -357,15 +357,15 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="84ad1dcb5bf64e8bb5494fc3000c9cd7-d5a51b7155b64e4e8d3a24bb3f24d544" name="84ad1dcb5bf64e8bb5494fc3000c9cd7" class="tab" checked><label for="84ad1dcb5bf64e8bb5494fc3000c9cd7-d5a51b7155b64e4e8d3a24bb3f24d544" >General</label>
-<input type="radio" id="84ad1dcb5bf64e8bb5494fc3000c9cd7-0845c3a70e8b456c96552bfe12c36120" name="84ad1dcb5bf64e8bb5494fc3000c9cd7" class="tab" ><label for="84ad1dcb5bf64e8bb5494fc3000c9cd7-0845c3a70e8b456c96552bfe12c36120" >Startup</label>
-<input type="radio" id="84ad1dcb5bf64e8bb5494fc3000c9cd7-16a93e0bc84747e1a461e1244d83e432" name="84ad1dcb5bf64e8bb5494fc3000c9cd7" class="tab" ><label for="84ad1dcb5bf64e8bb5494fc3000c9cd7-16a93e0bc84747e1a461e1244d83e432" >Android</label>
+<input type="radio" id="f2415e681ff748448ee4e4a64e2885e4-d6cc7c7e487a43338855f7fb4c8b69d9" name="f2415e681ff748448ee4e4a64e2885e4" class="tab" checked><label for="f2415e681ff748448ee4e4a64e2885e4-d6cc7c7e487a43338855f7fb4c8b69d9" >General</label>
+<input type="radio" id="f2415e681ff748448ee4e4a64e2885e4-769db894da47412e8ab965b47af113fa" name="f2415e681ff748448ee4e4a64e2885e4" class="tab" ><label for="f2415e681ff748448ee4e4a64e2885e4-769db894da47412e8ab965b47af113fa" >Startup</label>
+<input type="radio" id="f2415e681ff748448ee4e4a64e2885e4-0c375932d5824001a9162a4d4a259b91" name="f2415e681ff748448ee4e4a64e2885e4" class="tab" ><label for="f2415e681ff748448ee4e4a64e2885e4-0c375932d5824001a9162a4d4a259b91" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -399,7 +399,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/humidity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/humidity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
