--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -357,16 +357,16 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="dc1821ba1ebc4661b5dd690a3ec7e93e-5dd7237930d141eebdfe66613255b568" name="dc1821ba1ebc4661b5dd690a3ec7e93e" class="tab" checked><label for="dc1821ba1ebc4661b5dd690a3ec7e93e-5dd7237930d141eebdfe66613255b568" >General</label>
-<input type="radio" id="dc1821ba1ebc4661b5dd690a3ec7e93e-cc6b6a4a49cd46b9a4b67b1c065f819b" name="dc1821ba1ebc4661b5dd690a3ec7e93e" class="tab" ><label for="dc1821ba1ebc4661b5dd690a3ec7e93e-cc6b6a4a49cd46b9a4b67b1c065f819b" >Startup</label>
-<input type="radio" id="dc1821ba1ebc4661b5dd690a3ec7e93e-9355060e179e4eaf85bf76873cb0223d" name="dc1821ba1ebc4661b5dd690a3ec7e93e" class="tab" ><label for="dc1821ba1ebc4661b5dd690a3ec7e93e-9355060e179e4eaf85bf76873cb0223d" >Android</label>
-<input type="radio" id="dc1821ba1ebc4661b5dd690a3ec7e93e-fe5ad5e87f58426b820739e7517217d9" name="dc1821ba1ebc4661b5dd690a3ec7e93e" class="tab" ><label for="dc1821ba1ebc4661b5dd690a3ec7e93e-fe5ad5e87f58426b820739e7517217d9" >iOS</label>
+<input type="radio" id="b6a42fcbf7dd482d949a2df994b54517-11af88cc8714491585c60eb21c48ebbf" name="b6a42fcbf7dd482d949a2df994b54517" class="tab" checked><label for="b6a42fcbf7dd482d949a2df994b54517-11af88cc8714491585c60eb21c48ebbf" >General</label>
+<input type="radio" id="b6a42fcbf7dd482d949a2df994b54517-328359130d124149bb08f211c2b57125" name="b6a42fcbf7dd482d949a2df994b54517" class="tab" ><label for="b6a42fcbf7dd482d949a2df994b54517-328359130d124149bb08f211c2b57125" >Startup</label>
+<input type="radio" id="b6a42fcbf7dd482d949a2df994b54517-70e78f44581e476c89703cc0c94f8864" name="b6a42fcbf7dd482d949a2df994b54517" class="tab" ><label for="b6a42fcbf7dd482d949a2df994b54517-70e78f44581e476c89703cc0c94f8864" >Android</label>
+<input type="radio" id="b6a42fcbf7dd482d949a2df994b54517-5f6b510a291f4583b581268d4a6d39aa" name="b6a42fcbf7dd482d949a2df994b54517" class="tab" ><label for="b6a42fcbf7dd482d949a2df994b54517-5f6b510a291f4583b581268d4a6d39aa" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -403,7 +403,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/proximity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/proximity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
