--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -357,15 +357,15 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="dc7508fc1948472dbf48b3aad3b1d171-dd03df79dc944d078fcd3f366df0fd92" name="dc7508fc1948472dbf48b3aad3b1d171" class="tab" checked><label for="dc7508fc1948472dbf48b3aad3b1d171-dd03df79dc944d078fcd3f366df0fd92" >General</label>
-<input type="radio" id="dc7508fc1948472dbf48b3aad3b1d171-5b8fd1ee3c714481b7e5c1d50d591edd" name="dc7508fc1948472dbf48b3aad3b1d171" class="tab" ><label for="dc7508fc1948472dbf48b3aad3b1d171-5b8fd1ee3c714481b7e5c1d50d591edd" >Startup</label>
-<input type="radio" id="dc7508fc1948472dbf48b3aad3b1d171-19e084c869a3442a98df2eebb5846987" name="dc7508fc1948472dbf48b3aad3b1d171" class="tab" ><label for="dc7508fc1948472dbf48b3aad3b1d171-19e084c869a3442a98df2eebb5846987" >Android</label>
+<input type="radio" id="2a4a6082a4c84a568e9cea92e89c0e22-d79ad6a807a1403ca6317935e2605da0" name="2a4a6082a4c84a568e9cea92e89c0e22" class="tab" checked><label for="2a4a6082a4c84a568e9cea92e89c0e22-d79ad6a807a1403ca6317935e2605da0" >General</label>
+<input type="radio" id="2a4a6082a4c84a568e9cea92e89c0e22-346d4dea939846378650b59933cfcb75" name="2a4a6082a4c84a568e9cea92e89c0e22" class="tab" ><label for="2a4a6082a4c84a568e9cea92e89c0e22-346d4dea939846378650b59933cfcb75" >Startup</label>
+<input type="radio" id="2a4a6082a4c84a568e9cea92e89c0e22-d9c77e11975f4cb395152d3b843e27db" name="2a4a6082a4c84a568e9cea92e89c0e22" class="tab" ><label for="2a4a6082a4c84a568e9cea92e89c0e22-d9c77e11975f4cb395152d3b843e27db" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -399,7 +399,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/temperature.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/temperature.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
