--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -357,7 +357,7 @@
                                                             <a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v230">v2.3.0 (Preview)</a>
+                                                            <a href="/release-notes/nextrelease">v2.3.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -369,11 +369,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="8b94ee852923433daf454262c048a095-a3bef49fba4544d18e0f6dee11a97fe6" name="8b94ee852923433daf454262c048a095" class="tab" checked><label for="8b94ee852923433daf454262c048a095-a3bef49fba4544d18e0f6dee11a97fe6" >General</label>
-<input type="radio" id="8b94ee852923433daf454262c048a095-58c8714a09d8447e9af2b9f00767dbf1" name="8b94ee852923433daf454262c048a095" class="tab" ><label for="8b94ee852923433daf454262c048a095-58c8714a09d8447e9af2b9f00767dbf1" >Startup</label>
-<input type="radio" id="8b94ee852923433daf454262c048a095-b2bae01e642c47c3a7667b5fa9c32458" name="8b94ee852923433daf454262c048a095" class="tab" ><label for="8b94ee852923433daf454262c048a095-b2bae01e642c47c3a7667b5fa9c32458" >Android</label>
-<input type="radio" id="8b94ee852923433daf454262c048a095-e3c16e4c18b54448a7a11236e06ec512" name="8b94ee852923433daf454262c048a095" class="tab" ><label for="8b94ee852923433daf454262c048a095-e3c16e4c18b54448a7a11236e06ec512" >iOS</label>
-<input type="radio" id="8b94ee852923433daf454262c048a095-9683d6ce8b64423ab91e7b9a7bf95795" name="8b94ee852923433daf454262c048a095" class="tab" ><label for="8b94ee852923433daf454262c048a095-9683d6ce8b64423ab91e7b9a7bf95795" >Windows</label></li>
+<input type="radio" id="a855733feee249ed91d588fd9cfa6e8c-669f3784968149c19c6f636048e7c1a7" name="a855733feee249ed91d588fd9cfa6e8c" class="tab" checked><label for="a855733feee249ed91d588fd9cfa6e8c-669f3784968149c19c6f636048e7c1a7" >General</label>
+<input type="radio" id="a855733feee249ed91d588fd9cfa6e8c-70ef822e479a4730889790f11d229076" name="a855733feee249ed91d588fd9cfa6e8c" class="tab" ><label for="a855733feee249ed91d588fd9cfa6e8c-70ef822e479a4730889790f11d229076" >Startup</label>
+<input type="radio" id="a855733feee249ed91d588fd9cfa6e8c-5ebe6c2caec145fd9164cad4aed6b205" name="a855733feee249ed91d588fd9cfa6e8c" class="tab" ><label for="a855733feee249ed91d588fd9cfa6e8c-5ebe6c2caec145fd9164cad4aed6b205" >Android</label>
+<input type="radio" id="a855733feee249ed91d588fd9cfa6e8c-fd7dc989d57243d5834f8175323f2062" name="a855733feee249ed91d588fd9cfa6e8c" class="tab" ><label for="a855733feee249ed91d588fd9cfa6e8c-fd7dc989d57243d5834f8175323f2062" >iOS</label>
+<input type="radio" id="a855733feee249ed91d588fd9cfa6e8c-d8389edb3f23459fb211275598bcd53d" name="a855733feee249ed91d588fd9cfa6e8c" class="tab" ><label for="a855733feee249ed91d588fd9cfa6e8c-d8389edb3f23459fb211275598bcd53d" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
@@ -479,7 +479,7 @@ namespace Samples.UWP
                                             <p class="small font-weight-bold">On This Page</p>
                                                 <p class="small"><a href="#uwp">UWP</a></p>
                                         </div>
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/setup/uwp.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/setup/uwp.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
